--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -35,29 +35,35 @@
   </head>
 
   <body>
-    <!--Navigation bar-->
-    <div id="nav-placeholder"></div>
-
     <!-- Page Header -->
     <header class="bg-primary text-white text-center py-5">
       <div class="container">
         <h1 class="display-4">Kontakt Os</h1>
         <p class="lead">Har du spørgsmål eller vil du vide mere?</p>
+        
+        <!-- Navigation Links -->
+        <div class="mt-4">
+          <a href="index.html" class="btn btn-primary btn-lg me-3" role="button">
+            <i class="fas fa-home me-2"></i>Hjem
+          </a>
+          <a href="about.html" class="btn btn-primary btn-lg me-3" role="button">
+            <i class="fas fa-info-circle me-2"></i>Om Os
+          </a>
+          <a href="tilmelding.html" class="btn btn-primary btn-lg me-3" role="button">
+            <i class="fas fa-calendar-plus me-2"></i>Tilmeld til Events
+          </a>
+          <a href="ansogning.html" class="btn btn-primary btn-lg me-3" role="button">
+            <i class="fas fa-file-alt me-2"></i>Ansøg om Støtte
+          </a>
+          <a href="admin-panel.html" class="btn btn-primary btn-lg me-3" role="button">
+            <i class="fas fa-cog me-2"></i>Admin Panel
+          </a>
+          <a href="login.html" class="btn btn-primary btn-lg" role="button">
+            <i class="fas fa-sign-in-alt me-2"></i>Login
+          </a>
+        </div>
       </div>
     </header>
-
-    <script>
-      $(function () {
-        $("#nav-placeholder").load("navbar.html", function () {
-          // Initialize login button after navbar is loaded
-          if (typeof initializeLoginButton === "function") {
-            initializeLoginButton();
-          } else {
-            $.getScript("login-button.js");
-          }
-        });
-      });
-    </script>
 
     <main class="container mt-5 pt-5">
       <div class="row">
