--- a/frontend/html/about.html
+++ b/frontend/html/about.html
@@ -35,29 +35,55 @@
   </head>
 
   <body>
-    <!--Navigation bar-->
-    <div id="nav-placeholder"></div>
-
     <!-- Page Header -->
-    <header class="bg-primary text-white text-center py-5">
+    <header
+      class="hero-section d-flex align-items-center justify-content-center text-center text-white"
+      id="header"
+    >
       <div class="container">
-        <h1 class="display-4">Om Vennekredsen</h1>
-        <p class="lead">Lær mere om vores mission og værdier</p>
+        <h1 class="hero-title mb-4">
+          Om Vennekredsen
+        </h1>
+        <p class="hero-subtitle lead mb-4">
+          Lær mere om vores mission og værdier
+        </p>
+        <div class="hero-actions">
+          <a
+            href="index.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Hjem"
+          >
+            <i class="fas fa-home me-2"></i>Hjem
+          </a>
+          <a
+            href="ansogning.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Ansøg om støtte fra Vennekredsen"
+          >
+            <i class="fas fa-file-alt me-2"></i>Ansøg om støtte
+          </a>
+          <a
+            href="tilmelding.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Tilmeld dig til arrangementer"
+          >
+            <i class="fas fa-calendar-plus me-2"></i>Tilmeld til Events
+          </a>
+          <a
+            href="about.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Læs om Vennekredsen"
+          >
+            <i class="fas fa-info-circle me-2"></i>Om Os
+          </a>
+        </div>
       </div>
     </header>
-
-    <script>
-      $(function () {
-        $("#nav-placeholder").load("navbar.html", function () {
-          // Initialize login button after navbar is loaded
-          if (typeof initializeLoginButton === "function") {
-            initializeLoginButton();
-          } else {
-            $.getScript("login-button.js");
-          }
-        });
-      });
-    </script>
+    
 
     <main class="container mt-5 pt-5">
       <section id="vennekredsen" class="mb-5" aria-label="Om Vennekredsen">
