--- a/frontend/html/admin-login.html
+++ b/frontend/html/admin-login.html
@@ -12,14 +12,51 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body>
-    <!--Navigation bar-->
-    <div id="nav-placeholder"></div>
-
-    <script>
-      $(function () {
-        $("#nav-placeholder").load("navbar.html");
-      });
-    </script>
+    <!-- Hero Section -->
+    <header
+      class="hero-section d-flex align-items-center justify-content-center text-center text-white"
+      id="header"
+    >
+      <div class="container">
+        <h1 class="hero-title mb-4">
+          Admin Login - Vennekredsen for Hashøjskolen
+        </h1>
+        <div class="hero-actions">
+          <a
+            href="index.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Hjem"
+          >
+            <i class="fas fa-home me-2"></i>Hjem
+          </a>
+          <a
+            href="ansogning.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Ansøg om støtte fra Vennekredsen"
+          >
+            <i class="fas fa-file-alt me-2"></i>Ansøg om støtte
+          </a>
+          <a
+            href="tilmelding.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Tilmeld dig til arrangementer"
+          >
+            <i class="fas fa-calendar-plus me-2"></i>Tilmeld til Events
+          </a>
+          <a
+            href="about.html"
+            class="btn btn-primary btn-lg me-3"
+            role="button"
+            aria-label="Læs om Vennekredsen"
+          >
+            <i class="fas fa-info-circle me-2"></i>Om Os
+          </a>
+        </div>
+      </div>
+    </header>
 
     <main class="container my-5">
       <div class="row">
