--- a/frontend/html/ansogning.html
+++ b/frontend/html/ansogning.html
@@ -85,7 +85,7 @@
             <i class="fas fa-info-circle me-2"></i>Om Os
           </a>
           <a
-            href="login.html"
+            href="admin-login.html"
             class="btn btn-primary btn-lg"
             role="button"
             aria-label="Login"
