--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -108,7 +108,7 @@
 
         <article class="card mb-4">
           <div class="card-body">
-            <h3 class="card-title">Hvad støtter vi?</h3>
+            <h3 class="card-title" align="center">Hvad støtter vi?</h3>
             <p class="card-text text-center">
               Gruppen samler penge ind til at støtte forskellige aktiviteter og
               faciliteter, der gør hverdagen både sjovere og mere lærerig for
