--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -138,7 +138,7 @@
 
         <article class="card">
           <div class="card-body">
-            <h3 class="card-title">Hvordan tjener vi penge?</h3>
+            <h3 class="card-title" align="center">Hvordan tjener vi penge?</h3>
             <p class="card-text text-center">
               Vennekredsen tjener penge gennem tre årlige fester, som de
               arrangerer for skolens børn. Disse fester inkluderer en
