--- a/frontend/html/admin-panel.html
+++ b/frontend/html/admin-panel.html
@@ -34,14 +34,17 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   </head>
   <body>
-    <!-- Page Header -->
-    <header class="bg-primary text-white text-center py-5">
+    <!-- Hero Section -->
+    <header
+      class="hero-section d-flex align-items-center justify-content-center text-center text-white"
+      id="header"
+    >
       <div class="container">
-        <h1 class="display-4">Admin Panel</h1>
-        <p class="lead">Administrer ansøgninger og brugere</p>
+        <h1 class="hero-title mb-4">Admin Panel</h1>
+        <p class="hero-subtitle lead mb-4">Administrer ansøgninger og brugere</p>
         
         <!-- Navigation Links -->
-        <div class="mt-4">
+        <div class="hero-actions">
           <a href="index.html" class="btn btn-primary btn-lg me-3" role="button">
             <i class="fas fa-home me-2"></i>Hjem
           </a>
@@ -57,7 +60,7 @@
           <a href="admin-panel.html" class="btn btn-secondary btn-lg me-3" role="button">
             <i class="fas fa-cog me-2"></i>Admin Panel
           </a>
-          <a href="login.html" class="btn btn-primary btn-lg" role="button">
+          <a href="admin-admin-login.html" class="btn btn-primary btn-lg" role="button">
             <i class="fas fa-sign-in-alt me-2"></i>Login
           </a>
         </div>
@@ -356,7 +359,7 @@
       document.addEventListener("DOMContentLoaded", function () {
         const token = localStorage.getItem("adminToken");
         if (!token) {
-          window.location.href = "login.html";
+          window.location.href = "admin-admin-login.html";
           return;
         }
 
@@ -417,7 +420,7 @@
             if (response.status === 401) {
               // Token expired or invalid
               localStorage.removeItem("adminToken");
-              window.location.href = "login.html";
+              window.location.href = "admin-login.html";
               return;
             }
             throw new Error(`HTTP error: ${response.status}`);
@@ -660,7 +663,7 @@
             if (response.status === 401) {
               // Token expired or invalid
               localStorage.removeItem("adminToken");
-              window.location.href = "login.html";
+              window.location.href = "admin-login.html";
               return;
             }
             throw new Error(`HTTP error: ${response.status}`);
@@ -701,7 +704,7 @@
             if (response.status === 401) {
               // Token expired or invalid
               localStorage.removeItem("adminToken");
-              window.location.href = "login.html";
+              window.location.href = "admin-login.html";
               return;
             }
 
@@ -779,7 +782,7 @@
           if (!response.ok) {
             if (response.status === 401) {
               localStorage.removeItem("adminToken");
-              window.location.href = "login.html";
+              window.location.href = "admin-login.html";
               return;
             }
             throw new Error(`HTTP error: ${response.status}`);
@@ -986,7 +989,7 @@
       // Logout function
       function logout() {
         localStorage.removeItem("adminToken");
-        window.location.href = "login.html";
+        window.location.href = "admin-login.html";
       }
 
       // Helper function to prevent XSS
