--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -35,14 +35,17 @@
   </head>
 
   <body>
-    <!-- Page Header -->
-    <header class="bg-primary text-white text-center py-5">
+    <!-- Hero Section -->
+    <header
+      class="hero-section d-flex align-items-center justify-content-center text-center text-white"
+      id="header"
+    >
       <div class="container">
-        <h1 class="display-4">Kontakt Os</h1>
-        <p class="lead">Har du spørgsmål eller vil du vide mere?</p>
+        <h1 class="hero-title mb-4">Kontakt Os</h1>
+        <p class="hero-subtitle lead mb-4">Har du spørgsmål eller vil du vide mere?</p>
         
         <!-- Navigation Links -->
-        <div class="mt-4">
+        <div class="hero-actions">
           <a href="index.html" class="btn btn-primary btn-lg me-3" role="button">
             <i class="fas fa-home me-2"></i>Hjem
           </a>
@@ -58,7 +61,7 @@
           <a href="admin-panel.html" class="btn btn-primary btn-lg me-3" role="button">
             <i class="fas fa-cog me-2"></i>Admin Panel
           </a>
-          <a href="login.html" class="btn btn-primary btn-lg" role="button">
+          <a href="admin-login.html" class="btn btn-primary btn-lg" role="button">
             <i class="fas fa-sign-in-alt me-2"></i>Login
           </a>
         </div>
